temporal-verifier/tests/examples/fail/sorts/sort_inference_but_still_wrong.fly
# Copyright 2022-2023 VMware, Inc.
# SPDX-License-Identifier: BSD-2-Clause

sort s

assume exists x:s, y:s. x != y
assert exists x:s. forall y. x = y
